src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/ARBDrawBuffers_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBDrawBuffers_StringErrorContext.class */
public final class ARBDrawBuffers_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglDrawBuffersARB(IJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDrawBuffersErrorContext");
        methods.put("glDrawBuffersARB(Ljava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDrawBuffersErrorContext");
        methods.put("glDrawBuffersARB([I)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDrawBuffersErrorContext");
        return methods;
    }
}
